tests/snapshots/help__should_render_current_help_from_help_binary.snap
---
source: tests/help.rs
expression: "sdk_help_stdout(\"current\")"
---
Show the default version of one or all SDKs

Usage: sdk current [SDK]

Without an SDK, lists every SDK that has a default version. With an SDK, shows
the default version of that SDK.

Arguments:
  [SDK]
          The SDK whose default version to show

Options:
  -h, --help
          Print help

Aliases: c

Exit status:
  Exits with a non-zero code if the SDK does not exist or has no default
  version.

Examples:
  sdk current
  sdk current java
